apps/tpi-1/service-stubs/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: default
  annotations:
    service.cilium.io/global: "true"
    service.cilium.io/affinity: "remote"
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 7878
    protocol: TCP
    targetPort: http
  type: ClusterIP
