apps/tpi-1/service-stubs/radarr/httproute-envoy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-envoy
  namespace: default
spec:
  parentRefs:
  - name: envoy-gw
    namespace: envoy-gateway-system
    sectionName: wahooli-https
  hostnames:
  - "radarr.${domain_wahoo_li:=wahoo.li}"
  rules:
  - backendRefs:
    - name: ak-outpost-proxy-default
      port: 9000
